Archive2/97/b34742374d9008/output
main.cpp:8:14: error: expected unqualified-id before ')' token
 typedef int(*)[10] array_type;
              ^
main.cpp:8:20: error: expected initializer before 'array_type'
 typedef int(*)[10] array_type;
                    ^
main.cpp: In function 'int main()':
main.cpp:18:11: warning: unused variable 'c' [-Wunused-variable]
     Foo (*c)[7];
           ^
